--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <title>Hacker Space</title>
 </head>
 <body>
-<h1>Hacker Space</h1></body>
+<h1>Hacker Space</h1>
+  <p>This is Gus and hello everyone
+</p>
+  </body>
 </html>
