--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
 <head>
 <title>Hacker Space</title>
+  <style>
+    h1{
+      background-color:#dedede;
+      text-align:center
+    }
+  </style>
 </head>
 <body>
 <h1>Hacker Space</h1>
+  <hl>
+  <p>This is were we can talk about coding/hacking</p>
   </body>
 </html>
