--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
       background-color:#dedede;
       text-align:center
     }
+    p{text-align:center;
+    background-color:#efefef}
   </style>
 </head>
 <body>
 <h1>Hacker Space</h1>
   <hr>
   <p>This is were we can talk about coding/hacking</p>
+  <h3>How you hack?</h3>
+  <p>Press crtl-shift-i to acsess the inspect then click edit as html and change the text</p>
   </body>
 </html>
