--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
       background-color:#dedede;
       text-align:center
     }
+    h3{
+      background-color:#ededed;
+      text-align:center;
+    }
     p{text-align:center;
     background-color:#efefef}
   </style>
