--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
   <p>This is were we can talk about coding/hacking</p>
   <h3>How you hack?</h3>
   <p>Press crtl-shift-i to acsess the inspect then click edit as html and change the text</p>
+  <h3>Our Services</h3>
+  <ol>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="https://github.com/Hackerpanda-1/Hacker-space/edit/master/chat.txt">Chat</a></li>
+    <li><a href="https://github.com/Hackerpanda-1/Hacker-space">Edit</a></li>
+   
+  </ol>
   </body>
 </html>
