--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <li><a href="https://github.com/Hackerpanda-1/Hacker-space">Edit</a></li>
    
   </ol>
-
+  <h3>Games</h3>
+  <ul>
+    <li>Connect Four <a href="https://ryanyun2010.github.io/connect-four/">Play</a></li>
+  </ul>
   </body>
 </html>
