--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   </ol>
   <h3>Games</h3>
   <ul>
-    <li>Connect Four <a href="https://ryanyun2010.github.io/connect-four/">Play</a></li>
-    <li>Tag <a href="https://ryan1.wisen.space/app/pandalandtag">Play</a></li>
+    <!--<li>Connect Four <a href="https://ryanyun2010.github.io/connect-four/">Play</a></li>
+    <li>Tag <a href="https://ryan1.wisen.space/app/pandalandtag">Play</a></li>!-->
   </ul>
   </body>
 </html>
