--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
   </ol>
   <h3>Games</h3>
   <ul>
-    <li>Connect Four <a href="https://ryanyun2010.github.io/connect-four/">Play</a></li>
-    <li>Tag <a href="https://ryan1.wisen.space/app/pandalandtag">Play</a></li>
-<li><a href="https://www.slither.io">Slither</a></li>
+    <li><a href="https://ryanyun2010.github.io/connect-four/">Play Connect Four</a></li>
+    <li><a href="https://ryan1.wisen.space/app/pandalandtag">Play Tag</a></li>
+<li><a href="https://www.slither.io">Play Slither</a></li>
 
-<li><a href="https://www.paper-io.com">Paper</a></li>
+<li><a href="https://www.paper-io.com">Play Paper</a></li>
   </ul>
   </body>
 </html>
