--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     }
     p{text-align:center;
     background-color:#efefef}
+    #nav{
+      position:fixed;
+      height:100px;
+      top:0px;
+      width:100vw;
+    }
   </style>
 </head>
 <body>
@@ -21,7 +27,7 @@
   <h3>How you hack?</h3>
   <p>Press crtl-shift-i to acsess the inspect then click edit as html and change the text</p>
   <h3>Our Services</h3>
-  <ol>
+  <ol id="nav">
     <li><a href="index.html">Home</a></li>
     <li><a href="https://github.com/Hackerpanda-1/Hacker-space/edit/master/chat.txt">Chat</a></li>
     <li><a href="https://github.com/Hackerpanda-1/Hacker-space">Edit</a></li>
