--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     background-color:#efefef}
     #nav{
       position:fixed;
-      height:25px;
+      height:1em;
       top:0px;
       width:100vw;
     }
@@ -27,10 +27,10 @@
   <h3>How you hack?</h3>
   <p>Press crtl-shift-i to acsess the inspect then click edit as html and change the text</p>
   <h3>Our Services</h3>
-  <ol id="nav">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="https://github.com/Hackerpanda-1/Hacker-space/edit/master/chat.txt">Chat</a></li>
-    <li><a href="https://github.com/Hackerpanda-1/Hacker-space">Edit</a></li>
+  <p id="nav">
+    <a href="index.html">Home</a></li>
+    <a href="https://github.com/Hackerpanda-1/Hacker-space/edit/master/chat.txt">Chat</a></li>
+    <a href="https://github.com/Hackerpanda-1/Hacker-space">Edit</a></li>
    
   </ol>
   <h3>Games</h3>
