--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       position:fixed;
       height:1em;
       top:0px;
-      width:100vw;
+      width:100vw;text-align:left;
+      background-color:transparent;
     }
   </style>
 </head>
