--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     }
     p{text-align:center;
     background-color:#efefef}
+    ul{
+    margin:auto;}
     #nav{
       position:fixed;
       height:1em;
