--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       width:100vw;text-align:left;
       background-color:transparent;
     }
+    body{padding-left:10%;padding-right:10%}
   </style>
 </head>
 <body>
