--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       width:100vw;text-align:left;
       background-color:transparent;
     }
-    body{padding-left:10%;padding-right:10%}
+    #c{padding-left:10%;padding-right:10%}
   </style>
 </head>
 <body>
+  <div id="c">
 <h1>Hacker Space</h1>
   <hr>
   <p>This is were we can talk about coding/hacking</p>
@@ -44,5 +45,6 @@
 
 <li><a href="https://www.paper-io.com">Play Paper</a></li>
   </ul>
+</div>
   </body>
 </html>
