--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       position:fixed;
       height:1em;
       top:0px;
-      width:100vw;text-align:left;
-      background-color:transparent;
+      left:0px;text-align:left;
+      
     }
     #c{padding-left:10%;padding-right:10%}
   </style>
